--- a/components/Question_form.css
+++ b/components/Question_form.css
@@ -1,3 +1,4 @@
+
 .question_form {
 	background-color: #F4F4F9;
 	height: 100%;
@@ -61,6 +62,7 @@
 	padding-top: 0px;
 	width: 93%;
 	margin-left: 10px;
+	margin-top: 10px;
 }
 
 .add_question_top {
@@ -125,14 +127,64 @@
 	height: 40px;
 	width: 490px;
 	font-family: Roboto;
-	font-size: 13px;
+	font-size: 16px;
 	font-weight: 400;
 	letter-spacing: .2px;
 	color: rgb(38, 38, 38);
 	padding: 5px 10px;  
+	font-family: 'Google Sans';
 }
 
 .text_input:focus {
 	border-bottom: 2px solid rgb(35, 143, 244); 
 	background-color: #F4F4F9; 
+}
+
+*{
+	font-family: 'Google Sans Text', sans-serif;
+}
+
+.add_footer{
+	display: flex;
+	justify-content: space-between;
+
+}
+
+.add_question_bottom{
+	margin-top: 12px;
+	border-top: 1px solid;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.add_question_bottom_left{
+	margin-top: 12px;
+	border-top: 1px solid;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;	
+}
+
+.add_border{
+	border-left: 6px solid rgb(35, 143, 244);;
+}
+
+.question_edit{
+	background-color: #F4F4F9;
+	display: flex;
+	flex-direction: column;
+	margin-right: 12px;
+	margin-top: 10px;
+	margin-bottom: 0;
+	padding: 1px;
+	border-radius: 3px;
+	height: 180px;
+	width: 35px;
+	
+}
+
+.edit{
+	color: #5f6368;
+	padding: 8px 5px;
 }
